# simple-qt-calculator

./: CMakeLists.txt  README.md
include/: SimpleCalculator.h  moc_SimpleCalculator.cpp_parameters  utility.h
src/: SimpleCalculator.cpp  main.cpp  utility.cpp
